// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete resource delete an opa type policy 1`] = `
Object {
  "defaultUpstream": Object {
    "targetOrigin": "http://localhost:8080",
  },
  "policies": Array [],
  "policyAttachments": Object {},
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "schema": "type Query {
  something: String!
}
",
    },
  ],
  "upstreamClientCredentials": Array [
    Object {
      "activeDirectory": Object {
        "authority": "https://authority",
        "clientId": "myClientId",
        "clientSecret": "myClientSecret",
      },
      "authType": "ActiveDirectory",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
  "upstreams": Array [
    Object {
      "auth": Object {
        "activeDirectory": Object {
          "authority": "https://authority",
          "resource": "someResource",
        },
        "type": "ActiveDirectory",
      },
      "host": "test.api",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
}
`;

exports[`Delete resource delete an opa type policy 2`] = `Object {}`;

exports[`Delete resource deletes a Schema 1`] = `
Object {
  "defaultUpstream": Object {
    "targetOrigin": "http://localhost:8080",
  },
  "policies": Array [
    Object {
      "args": Object {
        "an": Object {
          "type": "String",
        },
        "another": Object {
          "type": "String!",
        },
      },
      "code": "real rego code
           with multiple
           lines",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "query": Object {
        "gql": "some another gql",
        "variables": Object {
          "c": "d",
        },
      },
      "type": "opa",
    },
  ],
  "policyAttachments": Object {},
  "schemas": Array [],
  "upstreamClientCredentials": Array [
    Object {
      "activeDirectory": Object {
        "authority": "https://authority",
        "clientId": "myClientId",
        "clientSecret": "myClientSecret",
      },
      "authType": "ActiveDirectory",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
  "upstreams": Array [
    Object {
      "auth": Object {
        "activeDirectory": Object {
          "authority": "https://authority",
          "resource": "someResource",
        },
        "type": "ActiveDirectory",
      },
      "host": "test.api",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
}
`;

exports[`Delete resource deletes a Schema using deleteResources 1`] = `
Object {
  "defaultUpstream": Object {
    "targetOrigin": "http://localhost:8080",
  },
  "policies": Array [
    Object {
      "args": Object {
        "an": Object {
          "type": "String",
        },
        "another": Object {
          "type": "String!",
        },
      },
      "code": "real rego code
           with multiple
           lines",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "query": Object {
        "gql": "some another gql",
        "variables": Object {
          "c": "d",
        },
      },
      "type": "opa",
    },
  ],
  "policyAttachments": Object {},
  "schemas": Array [],
  "upstreamClientCredentials": Array [
    Object {
      "activeDirectory": Object {
        "authority": "https://authority",
        "clientId": "myClientId",
        "clientSecret": "myClientSecret",
      },
      "authType": "ActiveDirectory",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
  "upstreams": Array [
    Object {
      "auth": Object {
        "activeDirectory": Object {
          "authority": "https://authority",
          "resource": "someResource",
        },
        "type": "ActiveDirectory",
      },
      "host": "test.api",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
}
`;

exports[`Delete resource deletes an Upstream 1`] = `
Object {
  "defaultUpstream": Object {
    "targetOrigin": "http://localhost:8080",
  },
  "policies": Array [
    Object {
      "args": Object {
        "an": Object {
          "type": "String",
        },
        "another": Object {
          "type": "String!",
        },
      },
      "code": "real rego code
           with multiple
           lines",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "query": Object {
        "gql": "some another gql",
        "variables": Object {
          "c": "d",
        },
      },
      "type": "opa",
    },
  ],
  "policyAttachments": Object {},
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "schema": "type Query {
  something: String!
}
",
    },
  ],
  "upstreamClientCredentials": Array [
    Object {
      "activeDirectory": Object {
        "authority": "https://authority",
        "clientId": "myClientId",
        "clientSecret": "myClientSecret",
      },
      "authType": "ActiveDirectory",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
  "upstreams": Array [],
}
`;

exports[`Delete resource deletes an UpstreamClientCredentials 1`] = `
Object {
  "defaultUpstream": Object {
    "targetOrigin": "http://localhost:8080",
  },
  "policies": Array [
    Object {
      "args": Object {
        "an": Object {
          "type": "String",
        },
        "another": Object {
          "type": "String!",
        },
      },
      "code": "real rego code
           with multiple
           lines",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "query": Object {
        "gql": "some another gql",
        "variables": Object {
          "c": "d",
        },
      },
      "type": "opa",
    },
  ],
  "policyAttachments": Object {},
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "schema": "type Query {
  something: String!
}
",
    },
  ],
  "upstreamClientCredentials": Array [],
  "upstreams": Array [
    Object {
      "auth": Object {
        "activeDirectory": Object {
          "authority": "https://authority",
          "resource": "someResource",
        },
        "type": "ActiveDirectory",
      },
      "host": "test.api",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
}
`;

exports[`Delete resource deletes an opa type policy using deleteResources 1`] = `
Object {
  "defaultUpstream": Object {
    "targetOrigin": "http://localhost:8080",
  },
  "policies": Array [],
  "policyAttachments": Object {},
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "schema": "type Query {
  something: String!
}
",
    },
  ],
  "upstreamClientCredentials": Array [
    Object {
      "activeDirectory": Object {
        "authority": "https://authority",
        "clientId": "myClientId",
        "clientSecret": "myClientSecret",
      },
      "authType": "ActiveDirectory",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
  "upstreams": Array [
    Object {
      "auth": Object {
        "activeDirectory": Object {
          "authority": "https://authority",
          "resource": "someResource",
        },
        "type": "ActiveDirectory",
      },
      "host": "test.api",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
}
`;

exports[`Delete resource deletes an opa type policy using deleteResources 2`] = `Object {}`;

exports[`Delete resource reset an Default Upstream 1`] = `
Object {
  "policies": Array [
    Object {
      "args": Object {
        "an": Object {
          "type": "String",
        },
        "another": Object {
          "type": "String!",
        },
      },
      "code": "real rego code
           with multiple
           lines",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "query": Object {
        "gql": "some another gql",
        "variables": Object {
          "c": "d",
        },
      },
      "type": "opa",
    },
  ],
  "policyAttachments": Object {},
  "schemas": Array [
    Object {
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
      "schema": "type Query {
  something: String!
}
",
    },
  ],
  "upstreamClientCredentials": Array [
    Object {
      "activeDirectory": Object {
        "authority": "https://authority",
        "clientId": "myClientId",
        "clientSecret": "myClientSecret",
      },
      "authType": "ActiveDirectory",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
  "upstreams": Array [
    Object {
      "auth": Object {
        "activeDirectory": Object {
          "authority": "https://authority",
          "resource": "someResource",
        },
        "type": "ActiveDirectory",
      },
      "host": "test.api",
      "metadata": Object {
        "name": "name",
        "namespace": "namespace",
      },
    },
  ],
}
`;
